# raytracing-in-one-weekend

./: .gitignore  Cargo.toml  README.md  log.txt
benches/: my_benchmark.rs
src/: aabb.rs  bvh.rs  camera.rs  color.rs  hittable.rs  lib.rs  main.rs  material.rs  materials.rs  moving_sphere.rs  ray.rs  scene.rs  scenes.rs  sphere.rs  surfaces.rs  texture.rs  textures.rs  utilities.rs  vec3.rs
src/instances/: rotation.rs  translate.rs
src/lib/: camera.rs  color.rs  hittable.rs  lib.rs  ray.rs  scene.rs  vec3.rs
src/lib/instances/: mod.rs  rotation.rs
src/lib/materials/: dielectric.rs  diffuse_light.rs  isotropic.rs  lambertian.rs  metal.rs  mod.rs
src/lib/surfaces/: bowl.rs  bvh.rs  constant_medium.rs  mod.rs  parabola.rs  sphere.rs
src/lib/textures/: checker.rs  image.rs  mod.rs  perlin.rs  solid.rs
src/material/: dielectric.rs  lambertian.rs  metal.rs
src/materials/: dielectric.rs  diffuse_light.rs  lambertian.rs  metal.rs
src/surfaces/: aa_box.rs  aa_rects.rs  aabb.rs  bvh.rs  moving_sphere.rs  sphere.rs
src/texture/: checker.rs  solid.rs
src/textures/: checker.rs  image.rs  perlin.rs  solid.rs
