[package]
name = "raytracing"
version = "0.1.0"
authors = ["Ari <aricasasn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
rayon = "1.5.0"
indicatif = {version = "0.15.0", features = ["rayon"]}
image = "0.23.14"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false

[profile.dev]
opt-level = 2

[profile.release]
lto = true
codegen-units = 1
