[package]
name = "raytracing"
version = "0.1.0"
authors = ["Ari <aricasasn@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.8.0"
rayon = "1.5.1"
indicatif = {version = "0.16.2", features = ["rayon"]}
image = "0.23.14"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false


[profile.release]
lto = true
codegen-units = 1
